--- a/src/app/Components/accounting/request/request.component.html
+++ b/src/app/Components/accounting/request/request.component.html
@@ -9,7 +9,7 @@
         <div id="der">
             <h2 class="mt-4 titles">andres perez</h2>
             <p class="text">Telefono: 3107975421</p>
-            <button class="btn  titles">Crear cliente</button>
+            <button  routerLink="/employees" class="btn  titles">Crear cliente</button>
         </div>
     </div>
     <div id="contenedor1" class="shadow">
@@ -21,7 +21,7 @@
         <div id="der">
             <h2 class="mt-4 titles">andres perez</h2>
             <p class="text">Telefono: 3107975421</p>
-            <button class="btn  titles">Crear cliente</button>
+            <button  routerLink="/employees" class="btn  titles">Crear cliente</button>
         </div>
     </div>
     <div id="contenedor1" class="shadow">
@@ -33,7 +33,7 @@
         <div id="der">
             <h2 class="mt-4 titles">andres perez</h2>
             <p class="text">Telefono: 3107975421</p>
-            <button class="btn  titles">Crear cliente</button>
+            <button routerLink="/employees" class="btn  titles">Crear cliente</button>
         </div>
     </div>
     <div id="contenedor1" class="shadow">
@@ -45,7 +45,7 @@
         <div id="der">
             <h2 class="mt-4 titles">andres perez</h2>
             <p class="text">Telefono: 3107975421</p>
-            <button class="btn  titles">Crear cliente</button>
+            <button  routerLink="/employees" class="btn  titles">Crear cliente</button>
         </div>
     </div>
 </div>
