--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -42,15 +42,12 @@
                     <img id="icons" src="../../../assets/Iconos/box.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
-                  <h3 id="titles" class="mt-2 titles">Pedidos</h3>
+                  <h3 id="titles" class="mt-2 titles">Ventas</h3>
 
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/client">Crear Pedidos</a> </li>
-                    <li class="list-group-item titles"><a href="">Ver pedidos</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/delivery">Cronograma</a> </li>
                     <li class="list-group-item titles"><a href="">Ver reportes</a> </li>
-                    <li class="list-group-item titles"><a href="">Modificar pedidos</a> </li>
-                    <li class="list-group-item titles"><a href="">Eliminar pedidos</a> </li>
-
                   </ul>
 
                 </div>
@@ -65,7 +62,7 @@
                   <h3 id="titles" class="mt-2 titles">Finanzas</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles"><a href="">Ver pedidos</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/orders">Generar factura</a> </li>
                     <li class="list-group-item titles"><a href="">Generar reportes</a> </li>
                     <li class="list-group-item titles"><a href="">Validar pedido</a> </li>
                   </ul>
@@ -83,12 +80,47 @@
 
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a href="">Generar sticker</a> </li>
-                    <li class="list-group-item titles"><a href="">Ver pedido pendiente</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/delivery">Cronograma</a> </li>
                     <li class="list-group-item titles"><a href="">Despachar pedido</a> </li>
                   </ul>
 
                 </div>
               </div>
+              <!--Card 5-->
+              <div class="card  bg-secondary">
+                <div class="card-body">
+                  <picture>
+                    <img id="icons" src="../../../assets/Iconos/money.svg" width="40" height="40" alt="handShake"
+                      class="mr-2">
+                  </picture>
+                  <h3 id="titles" class="mt-2 titles">Contabilidad</h3>
+
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item titles"><a routerLink="/accounting">Solicitud clientes</a> </li>
+                    <li class="list-group-item titles"><a href="">Generar reportes</a> </li>
+                    <li class="list-group-item titles"><a href="">Validar pedido</a> </li>
+                  </ul>
+
+                </div>
+              </div>
+              <!--Card 6-->
+              <div class="card  bg-secondary">
+                <div class="card-body">
+                  <picture>
+                    <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
+                      class="mr-2">
+                  </picture>
+                  <h3 id="titles" class="mt-2 titles card-title">Actualización</h3>
+
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item titles"><a routerLink="/release">Crear actualización</a> </li>
+                    <li class="list-group-item titles"><a >Cronograma</a> </li>
+                    <li class="list-group-item titles"><a href="">Despachar pedido</a> </li>
+                  </ul>
+
+                </div>
+              </div>
+
               <!--Cards End-->
             </div>
           </div>
@@ -147,7 +179,7 @@
                             </button>
                           </small>
                           <ng-template #HtmlContent>
-                            <span >Juan Pablo</span><br>
+                            <span>Juan Pablo</span><br>
                             <span>Martha</span>
                           </ng-template>
                         </div>
@@ -167,6 +199,3 @@
     </div>
   </div>
 </div>
-
-
-
