--- a/src/app/Components/Orders/create-order/create-order.component.css
+++ b/src/app/Components/Orders/create-order/create-order.component.css
@@ -22,10 +22,13 @@
 .btn {
     background: red;
     color: white;
+    margin-left:10px;
     border-radius: 10px;
     padding: 6px 32px 6px 32px;
 }
-
+.btnDisable{
+  display: none;
+}
 #tbHeadLeft {
     background-color: #e4e4e4;
     border-radius: 15px 0px 0px 15px;
