--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -110,17 +110,14 @@
                     <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
                       class="mr-2">
                   </picture>
-                  <h3 id="titles" class="mt-2 titles card-title">Actualización</h3>
-
+                  <h3 id="titles" class="mt-2 titles card-title">Administracion</h3>
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/release">Crear actualización</a> </li>
-                    <li class="list-group-item titles"><a >Cronograma</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/release" >Reportes</a> </li>
                     <li class="list-group-item titles"><a href="">Despachar pedido</a> </li>
                   </ul>
-
                 </div>
               </div>
-
               <!--Cards End-->
             </div>
           </div>
