--- a/src/app/Pages/orders/orders.component.html
+++ b/src/app/Pages/orders/orders.component.html
@@ -34,7 +34,7 @@
                     <app-search-order></app-search-order>
                 </div>
                 <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-                    ...</div>
+                    <app-reports></app-reports></div>
                 <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
                     ...</div>
             </div>
