--- a/src/app/Pages/accounting/accounting.component.html
+++ b/src/app/Pages/accounting/accounting.component.html
@@ -31,7 +31,7 @@
                 </div>
                 <!--panel-1 ends-->
                 <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                    ...
+                    <app-create-client></app-create-client>
                 </div>
                 <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
                     ...</div>
