--- a/src/app/Components/Client/search-client/search-client.component.html
+++ b/src/app/Components/Client/search-client/search-client.component.html
@@ -10,13 +10,41 @@
                     <div class="form-group row">
                         <label for="staticEmail" class="col-sm-2 col-form-label text">CC:</label>
                         <div class="col-sm-10">
-                            <input type="number"  class="form-control text" id="staticEmail"
-                                placeholder="XX.XXX.XXX">
+                            <input type="number" class="form-control text" id="staticEmail" placeholder="XX.XXX.XXX">
                         </div>
                     </div>
                     <button type="submit" class="btn btn-block btn-success mb-4">Buscar</button>
                 </form>
                 <!-- Form ends-->
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <h3 class="modal-title titles text-center my-2" id="exampleModalLongTitle">Solicitud creación de cliente</h3>
+            <div class="modal-body">
+                <div class="container px-4">
+                    <form>
+                        <div class="form-group text-center">
+                            <label class="text" for="clientName">Nombre completo</label>
+                            <input type="text" class="form-control text-center" id="clientName"
+                                aria-describedby="clientHelp" placeholder="Ingresa el nombre del cliente ">
+                        </div>
+                        <div class="form-group text-center">
+                            <label class="text" for="clientNumber">Número telefonico</label>
+                            <input type="number" class="form-control text-center" id="clientNumber"
+                                placeholder="+57 XXX XXX XXXX">
+                        </div>
+                        <button type="submit" class="btn btn-success btn-block mt-4 mb-2">Enviar solicitud</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
