--- a/src/app/Components/accounting/request/request.component.html
+++ b/src/app/Components/accounting/request/request.component.html
@@ -1,51 +1,15 @@
-<h1 class="text-cente">Solicitud clientes</h1>
+<h1 class="text-center">Solicitud clientes</h1>
 <div id="full">
-    <div id="contenedor1" class="shadow">
+    <div *ngFor="let i of clients" class="shadow contenedor1">
         <div id="izq">
             <div id="avatar">
                 <img class="img-thumbnail rounded-circle shadow" src="../../../../assets/Iconos/user-solid.svg">
             </div>
         </div>
         <div id="der">
-            <h2 class="mt-4 titles">andres perez</h2>
-            <p class="text">Telefono: 3107975421</p>
-            <button  routerLink="/employees" class="btn  titles">Crear cliente</button>
-        </div>
-    </div>
-    <div id="contenedor1" class="shadow">
-        <div id="izq">
-            <div id="avatar">
-                <img class="img-thumbnail rounded-circle shadow" src="../../../../assets/Iconos/user-solid.svg">
-            </div>
-        </div>
-        <div id="der">
-            <h2 class="mt-4 titles">andres perez</h2>
-            <p class="text">Telefono: 3107975421</p>
-            <button  routerLink="/employees" class="btn  titles">Crear cliente</button>
-        </div>
-    </div>
-    <div id="contenedor1" class="shadow">
-        <div id="izq">
-            <div id="avatar">
-                <img class="img-thumbnail rounded-circle shadow" src="../../../../assets/Iconos/user-solid.svg">
-            </div>
-        </div>
-        <div id="der">
-            <h2 class="mt-4 titles">andres perez</h2>
-            <p class="text">Telefono: 3107975421</p>
+            <h2 class="mt-4 titles">{{i.nombre}}</h2>
+            <p class="text">Telefono: {{i.telefono}}</p>
             <button routerLink="/employees" class="btn  titles">Crear cliente</button>
-        </div>
-    </div>
-    <div id="contenedor1" class="shadow">
-        <div id="izq">
-            <div id="avatar">
-                <img class="img-thumbnail rounded-circle shadow" src="../../../../assets/Iconos/user-solid.svg">
-            </div>
-        </div>
-        <div id="der">
-            <h2 class="mt-4 titles">andres perez</h2>
-            <p class="text">Telefono: 3107975421</p>
-            <button  routerLink="/employees" class="btn  titles">Crear cliente</button>
         </div>
     </div>
 </div>
