--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -22,14 +22,14 @@
                     <img id="icons" src="../../../assets/Iconos/partnership-handshake.svg" width="40" height="40"
                       alt="handShake" class="mr-2">
                   </picture>
-                  <h3 id="titles" class="mt-2 titles ">Empleados</h3>
+                  <h3 id="titles" class="mt-2 titles ">Recursos Humanos</h3>
 
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/employees" href="#">Crear Empleado</a></li>
                     <li class="list-group-item titles"><a routerLink="/employees" href="#">Ver Empleados
-                        (CC/Todos)</a></li>
+                        </a></li>
                     <li class="list-group-item titles"><a routerLink="/employees" href="">Modificar</a></li>
-                    <li class="list-group-item titles"><a routerLink="/employees" href="">Eliminar*</a></li>
+
                   </ul>
 
                 </div>
@@ -46,8 +46,8 @@
 
                   <ul class="list-group list-group-flush">
                     <li class="list-group-item titles"><a routerLink="/client">Crear Pedidos</a> </li>
-                    <li class="list-group-item titles"><a routerLink="/delivery">Cronograma</a> </li>
-                    <li class="list-group-item titles"><a href="">Ver reportes</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/delivery">Ver Pedido (Usuario/todos)</a> </li>
+                    <li class="list-group-item titles"><a href="">Eliminar</a> </li>
                   </ul>
 
                 </div>
@@ -62,9 +62,9 @@
                   <h3 id="titles" class="mt-2 titles">Finanzas</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles"><a routerLink="/orders">Generar factura</a> </li>
-                    <li class="list-group-item titles"><a href="">Generar reportes</a> </li>
-                    <li class="list-group-item titles"><a href="">Validar pedido</a> </li>
+
+                    <li class="list-group-item titles"><a href="">Legalizar pago</a> </li>
+
                   </ul>
 
                 </div>
@@ -79,9 +79,9 @@
                   <h3 id="titles" class="mt-2 titles card-title">Despacho</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles"><a href="">Generar sticker</a> </li>
+
                     <li class="list-group-item titles"><a routerLink="/delivery">Cronograma</a> </li>
-                    <li class="list-group-item titles"><a href="">Despachar pedido</a> </li>
+                    <li class="list-group-item titles"><a routerLink="photography/:id">Buscar pedido</a> </li>
                   </ul>
 
                 </div>
@@ -96,9 +96,9 @@
                   <h3 id="titles" class="mt-2 titles">Contabilidad</h3>
 
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles"><a routerLink="/accounting">Solicitud clientes</a> </li>
-                    <li class="list-group-item titles"><a href="">Generar reportes</a> </li>
-                    <li class="list-group-item titles"><a href="">Validar pedido</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/accounting">Solicitud cliente</a> </li>
+                    <li class="list-group-item titles"><a href="">Crear Clientes</a> </li>
+                    <li class="list-group-item titles"><a href="">Modificar Clientes</a> </li>
                   </ul>
 
                 </div>
@@ -112,9 +112,22 @@
                   </picture>
                   <h3 id="titles" class="mt-2 titles card-title">Administracion</h3>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item titles"><a routerLink="/release">Crear actualización</a> </li>
-                    <li class="list-group-item titles"><a routerLink="/release" >Reportes</a> </li>
-                    <li class="list-group-item titles"><a href="">Despachar pedido</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/release">Crear Comunicado</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/release" >Modificar Comunicado</a> </li>
+                  </ul>
+                </div>
+              </div>
+              <!--Card 7-->
+              <div class="card  bg-secondary">
+                <div class="card-body">
+                  <picture>
+                    <img id="icons" src="../../../assets/Iconos/new.svg" width="40" height="40" alt="handShake"
+                      class="mr-2">
+                  </picture>
+                  <h3 id="titles" class="mt-2 titles card-title">Porteria</h3>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item titles"><a routerLink="/release">Verificacion de datos</a> </li>
+                    <li class="list-group-item titles"><a routerLink="/release" >Despachar pedido</a> </li>
                   </ul>
                 </div>
               </div>
